Day 20: CSS Tutorial @freeCodeCamp * start from scratch

--- a/Projects/WebDevCert/SurveyForm/index.html
+++ b/Projects/WebDevCert/SurveyForm/index.html
@@ -9,10 +9,10 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!--Place favicon.ico in the root directory-->
-
-  <link rel="stylesheet" href="css/normalize.css">
+  <link href="css/my-Style.css" rel="stylesheet" />
+  <!--<link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#fafafa">-->
   <title>Survey Form</title>
 </head>
 <body>
@@ -22,6 +22,7 @@
   <!-- Add your site or application content here -->
 
   <h1>Dominic's Survey Form</h1>
+  <img class="smaller-image img-border" src="img/main-background1.jpg" alt="Alternate Text" />
   <p>Thank you for taking the time to help us improve the platform </p>
   <form id="survey-form" action="">
     <div class="row-tab">
