Day 21: Update project

--- a/Projects/WebDevCert/SurveyForm/index.html
+++ b/Projects/WebDevCert/SurveyForm/index.html
@@ -15,16 +15,19 @@
   <meta name="theme-color" content="#fafafa">-->
   <title>Survey Form</title>
 </head>
-<body class="background-img">
+<body class="box-container background-img">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <!-- Add your site or application content here -->
-
-  <h1 class="red-text">Dominic's Survey Form</h1>
-  <img class="img-small img-border img-shadow" src="img/Me.jpg" alt="Alternate Text" />
-  <p class="thanks">Thank you for taking the time to help us improve the platform </p>
-  <form id="survey-form" action="">
+  <header id="header">
+    <h1 class="red-text">Dominic's Survey Form</h1>
+  </header>
+  <div class="img-div">
+    <img class="img-small img-border img-shadow" src="img/Me.jpg" alt="Alternate Text" />
+    <p class="thanks">Thank you for taking the time to help us improve the platform </p>
+  </div>
+  <form id="survey-form" class="box">
     <div class="row-tab">
       <div class="label-burger">
         <label for="">Name:</label>
