--- a/Projects/WebDevCert/SurveyForm/index.html
+++ b/Projects/WebDevCert/SurveyForm/index.html
@@ -15,19 +15,37 @@
   <meta name="theme-color" content="#fafafa">-->
   <title>Survey Form</title>
 </head>
-<body class="box-container background-img">
+<body>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <!-- Add your site or application content here -->
-  <header id="header">
+  <!--<header id="header">
     <h1 class="red-text">Dominic's Survey Form</h1>
-  </header>
-  <div class="img-div">
-    <img class="img-small img-border img-shadow" src="img/Me.jpg" alt="Alternate Text" />
-    <p class="thanks">Thank you for taking the time to help us improve the platform </p>
+  </header>-->
+  <div class="container">
+    <div class="box-1">
+      <!--<img class="img-small img-border img-shadow" src="img/Me.jpg" alt="Alternate Text" />-->
+      <h1>Hello World </h1>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="box-2">
+      <!--<img class="img-small img-border img-shadow" src="img/Me.jpg" alt="Alternate Text" />-->
+      <h1>Good bye World</h1>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="categories">
+      <h2>Categories</h2>
+      <ul>
+        <li><a href="#">Category 1</a></li>
+        <li><a href="#">Category 2</a></li>
+        <li><a href="#">Category 3</a></li>
+        <li><a href="#">Category 4</a></li>
+        <li><a href="test.html">Category 5</a></li>
+      </ul>
+    </div>
   </div>
-  <form id="survey-form" class="box">
+  <!--<form id="survey-form" class="box">
     <div class="row-tab">
       <div class="label-burger">
         <label for="">Name:</label>
@@ -121,13 +139,12 @@
         <button>Submit</button>
       </div>
     </div>
-  </form>
-
+  </form>-->
   <!-- Add your javascripts here -->
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+  <!--<script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script>-->
 </body>
 </html>
