--- a/Projects/WebDevCert/SurveyForm/index.html
+++ b/Projects/WebDevCert/SurveyForm/index.html
@@ -27,13 +27,18 @@
     <div class="box-1">
       <!--<img class="img-small img-border img-shadow" src="img/Me.jpg" alt="Alternate Text" />-->
       <h1>Hello World </h1>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet, consdfbdfbdfbfd  etetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo d
+        uo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="box-2">
       <!--<img class="img-small img-border img-shadow" src="img/Me.jpg" alt="Alternate Text" />-->
       <h1>Good bye World</h1>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <a class="button" href="">Read More</a>
     </div>
+
+
+
     <div class="categories">
       <h2>Categories</h2>
       <ul>
@@ -43,8 +48,26 @@
         <li><a href="#">Category 4</a></li>
         <li><a href="test.html">Category 5</a></li>
       </ul>
+      
     </div>
-  </div>
+    <form class="my-form">
+      <div class="form-group">
+        <label>Name: </label>
+        <input type="text" name="name" />
+      </div>
+      <div class="form-group">
+        <label>Email: </label>
+        <input type="text" name="email" />
+      </div>
+      <div class="form-group">
+        <label>Message: </label>
+        <textarea name="message"></textarea>
+      </div>
+      <input class="button" type="submit" value="Submit" />
+    </form>
+  </div><!-- .container -->
+  
+  <div style="margin-top:500px;"></div>
   <!--<form id="survey-form" class="box">
     <div class="row-tab">
       <div class="label-burger">
